--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.11.0",
     "typechain": "^6.0.2",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "web3": "^1.6.0"
   },
   "dependencies": {
     "ethers": "^5.5.1"
